--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Chat App</string>
     <string name="default_web_client_id">343078042994-431arntpuhfob9taf3bqh31i02u3l9pa.apps.googleusercontent.com</string>
+    <string name="online">Online</string>
 </resources>
